# uniform-k-compression

./: .gitignore  CONTRIBUTING.md  LICENSE  PROVIDERS.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt  run_analysis.py  test_providers.py
.github/workflows/: test.yml
configs/: analysis_template.json  example_meeting_notes.json  example_research_papers.json  framework_default.json  template.json
core/: __init__.py  base_provider.py  batch_interface.py  commentary_manager.py  config.py  document.py  fractal_summarizer.py  k_calibrator.py  layer_executor.py  llm_interface.py  ollama_interface.py  provider_factory.py
core/providers/: __init__.py  anthropic_provider.py  google_provider.py  openai_provider.py  xai_provider.py
docs/: OLLAMA_TESTING.md  README.md
examples/: README.md  example_config.json  provider_comparison.py  run_iterative_example.py  run_ollama_example.py  run_simple_example.py
examples/sample_data/: 03_a_scandal_in_bohemia.txt  04_the_red_headed_league.txt  05_a_case_of_identity.txt  07_the_five_orange_pips.txt
tests/: README_E2E.md  __init__.py  conftest.py  test_config.py  test_document.py  test_e2e_providers.py  test_end_to_end_ollama.py  test_k_calibrator.py  test_layer_executor_mock.py  test_llm_interface_mock.py  test_loader.py  test_ollama_question.py
tests/test_data/stories/: 01_a_study_in_scarlet.txt  02_the_sign_of_the_four.txt  06_the_boscombe_valley_mystery.txt  08_the_man_with_the_twisted_lip.txt  09_the_adventure_of_the_blue_carbuncle.txt  10_the_adventure_of_the_speckled_band.txt  11_the_adventure_of_the_engineer_s_thumb.txt  12_the_adventure_of_the_noble_bachelor.txt  13_the_adventure_of_the_beryl_coronet.txt  14_the_adventure_of_the_copper_beeches.txt  15_silver_blaze.txt  16_the_yellow_face.txt  17_the_stock_broker_s_clerk.txt  18_the_gloria_scott.txt  19_the_musgrave_ritual.txt  20_the_reigate_squires.txt  21_the_crooked_man.txt  41_preface.txt  (+40 more)
utilities/: __init__.py  chatgpt_cleaner.py  cooperative_chunker.py  document_loader.py  json_converter.py  prepare_chatgpt_json.py  prepare_claude_json.py
